--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_secure_storage: ^9.2.4
   logging: ^1.3.0
+  sembast: ^3.8.5+1
+  path_provider: ^2.1.5
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
