--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: mastertome
+name: tome
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -38,6 +38,7 @@ dependencies:
   sembast: ^3.8.5+1
   path_provider: ^2.1.5
   path: ^1.9.1
+  flutter_project_name_changer: ^1.0.5
 
 dev_dependencies:
   flutter_test:
